# game-of-life

./: .gitignore
src/: App.ixx  CMakeLists.txt  Main.cpp
src/app/: App.ixx
